# starling

./: CMakeLists.txt
include/: file.h  io_uring.h  percentile_stats.h  pq_flash_index.h
scripts/: config_dataset.sh  config_local.sh  config_sample.sh  download_dataset.sh  run_benchmark.sh
src/: CMakeLists.txt  async_search.cpp  page_search.cpp  pq_flash_index.cpp
src/storage/: CMakeLists.txt
src/storage/src/storage/: file.cc  file.h  io_uring.h
tests/: CMakeLists.txt  search_disk_index.cpp
tests/utils/: CMakeLists.txt  ana_index_layout.cpp  analyze_block_path.cpp  calc_affinity.cpp
